antex-rs/tui/src/chatwidget/tests/snapshots/antex_tui__chatwidget__tests__luna_reserve_usage_tests__luna_reserve_usage_narrow.snap
---
source: tui/src/chatwidget/tests/luna_reserve_usage_tests.rs
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 34))"
---
 ┃ Ask Antex to do anything

  Luna Reserve default · /tmp/pro…
