antex-rs/tui/src/chatwidget/tests/snapshots/antex_tui__chatwidget__tests__luna_reserve_usage_tests__luna_reserve_usage_wide.snap
---
source: tui/src/chatwidget/tests/luna_reserve_usage_tests.rs
assertion_line: 124
expression: rendered
---
 ┃ Ask Antex to do anything

  Luna Reserve default · /tmp/project
